src/main/resources/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: @project.artifactId@
  namespace: @project.artifactId@
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: @project.artifactId@
  template:
    metadata:
      labels:
        app: @project.artifactId@
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - image: @docker.image.name@
          imagePullPolicy: Always
          name: spring-boot
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            successThreshold: 1
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 180
            successThreshold: 1
          resources:
            requests:
              memory: 64Mi
            limits:
              memory: 256M
